--- a/public/styles/components/_eventsPage.scss
+++ b/public/styles/components/_eventsPage.scss
@@ -11,6 +11,10 @@
   margin: 2rem 0rem;
   position: relative;
 
+  .event-form .button-white.delete-event{
+    position: initial;
+  }
+
   .button-white.delete-event{
     position: absolute;
     left: 88%;
