--- a/public/styles/components/_clientInfo.scss
+++ b/public/styles/components/_clientInfo.scss
@@ -28,6 +28,7 @@
         display: flex;
         flex-direction: column;
         padding-left: 1rem;
+        max-width: 290px;
       }
 
       .active-bookings-numbers {
