--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -10,6 +10,7 @@
 @import 'components/adminClassCard.scss';
 @import 'components/clientsDetails.scss';
 @import 'components/clientInfo.scss';
+@import 'components/loader.scss';
 @import 'components/homePage.scss';
 @import 'components/adminBookingsPage.scss';
 @import 'components/clientAccountPage.scss';
