--- a/public/styles/components/_clientsDetails.scss
+++ b/public/styles/components/_clientsDetails.scss
@@ -171,7 +171,8 @@
     display: flex;
     align-items: center;
     cursor: pointer;
-
+    margin-top: 1rem;
+    
     .class-coverage-arrow:hover {
       .class-coverag p {
         font-weight: bold;
@@ -221,6 +222,7 @@
   .active-bookings-details {
     p {
       word-wrap: break-word;
+      max-width: 250px;
       margin: 0;
       font-size: 19px;
     }
