changes baseURL to remote url

--- a/public/styles/components/_adminClassesLayout.scss
+++ b/public/styles/components/_adminClassesLayout.scss
@@ -34,6 +34,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
 
     .button-add-class {
       display: flex;
