--- a/public/styles/components/_clientsDetails.scss
+++ b/public/styles/components/_clientsDetails.scss
@@ -352,6 +352,10 @@
   width: 222px;
   margin: 0 10px 20px 0;
 
+  .date{
+    font-size: 15px;
+  }
+
   .footer {
     display: flex;
     width: 100%;
