--- a/public/styles/components/_weekSchedulePage.scss
+++ b/public/styles/components/_weekSchedulePage.scss
@@ -54,6 +54,11 @@
     box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
     min-width: 400px;
 
+    .MuiFormLabel-root.Mui-focused {
+        background: none;
+        padding: 0rem;
+      }
+
     .button-white{
         margin-left: 2rem;
         box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 25%);
