--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -36,6 +36,10 @@ ul {
   font-weight: 300;
 }
 
+.loader {
+  z-index: 1;
+}
+
 .button-home {
   cursor: pointer;
   border-style: solid;
@@ -395,6 +399,9 @@ header .navItem {
   justify-content: space-evenly;
   margin: 1rem;
   flex-wrap: wrap;
+}
+.subscriptions .loader {
+  color: black;
 }
 .subscriptions .color {
   width: 100%;
