--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -16,5 +16,7 @@
 @import 'components/clientAccountPage.scss';
 @import 'components/eventsPage.scss';
 @import 'components/statistics.scss';
+@import 'components/editor.scss';
+@import 'components/preview.scss';
 
 @import './media.scss';
