--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1557,6 +1557,86 @@ header .navItem {
   padding: 0.5rem 1rem;
 }
 
+.editor {
+  border-radius: "10px";
+}
+
+.editor button,
+.preview button {
+  cursor: pointer;
+  border: none;
+}
+.editor p,
+.preview p {
+  font-size: 16px;
+}
+.editor h1,
+.preview h1 {
+  font-size: 30px;
+}
+.editor h2,
+.preview h2 {
+  font-size: 20px;
+}
+
+.preview {
+  padding: 2rem;
+}
+
+.feature-image {
+  width: 100%;
+  cursor: pointer;
+  height: 700px;
+  object-fit: cover;
+}
+
+.base-button span {
+  font-size: 14px;
+}
+
+.link {
+  color: #435fff;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.toolbar {
+  box-shadow: 0 10px 15px -2px #80808030;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.textfields {
+  position: sticky;
+  background: white;
+  z-index: 1;
+  left: 0;
+  top: 50px;
+  padding: 2rem;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.17);
+  max-width: 400px;
+  margin-top: -10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.preview {
+  cursor: "default";
+  background: "#FFFFFF";
+  display: "flex";
+  flex-direction: "column";
+  margin: "0 auto";
+}
+
+.preview-header {
+  width: 100%;
+}
+.preview-header img {
+  width: 100%;
+  height: 700px;
+  object-fit: cover;
+}
+
 @media (max-width: 1240px) {
   .home-content {
     justify-content: center;
