--- a/public/styles/components/_editor.scss
+++ b/public/styles/components/_editor.scss
@@ -8,15 +8,16 @@
         cursor: pointer;
         border: none;
     }
-    p{
+
+    p {
         font-size: 16px;
     }
 
-    h1{
+    h1 {
         font-size: 30px;
     }
 
-    h2{
+    h2 {
         font-size: 20px;
     }
 }
@@ -25,14 +26,14 @@
     padding: 2rem;
 }
 
-.feature-image{
+.feature-image {
     width: 100%;
     cursor: pointer;
-    height: 700px;
     object-fit: cover;
+    height: 700px;
 }
 
-.base-button{
+.base-button {
     span {
         font-size: 14px;
     }
@@ -45,9 +46,41 @@
 }
 
 .toolbar {
-    box-shadow: 0 10px 15px -2px #80808030;;
+    box-shadow: 0 10px 15px -2px #80808030;
+    ;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+.svg-container {
+    background: #CAC6EB;
+    padding-top: 280px;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    cursor: pointer;
+    position: relative;
+
+    h1 {
+        transition: all 0.9s ease-in-out;
+        position: absolute;
+        top: 10%;
+        color: #CAC6EB;
+        text-transform: uppercase;
+        max-width: 200px;
+        font-size: 40px;
+        text-align: center;
+        line-height: 1.3;
+        letter-spacing: 2px;
+    }
+}
+
+.svg-container:hover {
+    h1 {
+        color: white;
+        transition: all 0.9s ease-in-out;
+    }
+
 }
 
 .textfields {
@@ -55,11 +88,10 @@
     background: white;
     z-index: 1;
     left: 0;
-    top: 50px;
+    top: 70px;
     padding: 2rem;
-    box-shadow: 5px 5px 10px rgb(0 0 0 / 17%);
+    box-shadow: 2px 5px 10px rgb(0 0 0 / 17%);
     max-width: 400px;
-    margin-top: -10px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    margin: 15px;
+    border-radius: 10px;
 }
