--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -18,5 +18,6 @@
 @import 'components/statistics.scss';
 @import 'components/editor.scss';
 @import 'components/preview.scss';
+@import 'components/menuEditor.scss';
 
 @import './media.scss';
