--- a/public/styles/components/_adminLayout.scss
+++ b/public/styles/components/_adminLayout.scss
@@ -11,21 +11,95 @@
     font-size: 18px;
     border-radius: 15px;
     margin-bottom: 2rem;
-    
-    hr {
-        border-color: #efeaea57;
-        width: 95%;
+
+    .header,
+    .mobile-header {
+        border-bottom: solid;
+        border-width: thin;
+        border-color: #E4E4E4;
+        width: 85%;
     }
 
     .header {
-        padding: 1.5rem;
-        padding-top: 1.8rem;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        
+
         a {
-            margin: 0rem 2rem;
+            padding: 1.9rem 1.9rem;
+            margin-top: 1rem;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            margin-right: 1rem;
+        }
+        a:last-child {
+            margin-right: 0;
+        }
+
+        .active-tab {
+            background: #E6D7F5;
+            font-weight: 700;
+        }
+
+        a:hover {
+            background:#E6D7F5;
+        }
+    }
+
+    .mobile-header {
+        display: none;
+        text-transform: capitalize;
+        cursor: pointer;
+        padding: 1.9rem 0;
+        margin: 0 2rem;
+
+        a {
+            width: 90%;
+            text-align: center;
+        }
+    }
+}
+
+
+.dialog-content {
+    height: 400px;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+
+    a {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    a:hover {
+        background: #E6D7F5;
+    }
+
+    .active-tab {
+        background: #E6D7F5;
+        font-weight: 700;
+    }
+}
+
+.close {
+    cursor: pointer;
+    align-self: end;
+    margin: 25px 25px 25px 0;
+}
+
+@media(max-width: 820px) {
+    .admin-layout {
+        .header {
+            display: none;
+        }
+
+        .mobile-header {
+            display: flex;
+            align-items: center;
         }
     }
 }
