--- a/public/styles/components/_editor.scss
+++ b/public/styles/components/_editor.scss
@@ -34,6 +34,7 @@
 }
 
 .base-button {
+    position: relative;
     span {
         font-size: 14px;
     }
@@ -47,7 +48,6 @@
 
 .toolbar {
     box-shadow: 0 10px 15px -2px #80808030;
-    ;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -64,7 +64,7 @@
     h1 {
         transition: all 0.9s ease-in-out;
         position: absolute;
-        top: 10%;
+        top: 35%;
         color: #CAC6EB;
         text-transform: uppercase;
         max-width: 200px;
@@ -88,7 +88,7 @@
     background: white;
     z-index: 1;
     left: 0;
-    top: 70px;
+    top: 100px;
     padding: 2rem;
     box-shadow: 2px 5px 10px rgb(0 0 0 / 17%);
     max-width: 400px;
