--- a/public/styles/components/blog/_editor.scss
+++ b/public/styles/components/blog/_editor.scss
@@ -2,6 +2,10 @@
     border-radius: "10px";
 }
 
+.editable {
+    padding: 20px 20%;
+}
+
 .editor,
 .preview {
     button {
@@ -22,10 +26,6 @@
     }
 }
 
-.preview {
-    padding: 2rem;
-}
-
 .feature-image {
     width: 100%;
     cursor: pointer;
@@ -35,6 +35,7 @@
 
 .base-button {
     position: relative;
+
     span {
         font-size: 14px;
     }
@@ -46,13 +47,7 @@
     text-decoration: underline;
 }
 
-.toolbar {
-    box-shadow: 0 10px 15px -2px #80808030;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.svg-container {
+.feature-image-placeholder {
     background: #CAC6EB;
     padding-top: 280px;
     display: flex;
@@ -60,6 +55,9 @@
     justify-content: center;
     cursor: pointer;
     position: relative;
+    background: #E6D7F5;
+    height: 700px;
+    width: 100%;
 
     h1 {
         transition: all 0.9s ease-in-out;
@@ -75,23 +73,20 @@
     }
 }
 
-.svg-container:hover {
+.feature-image-placeholder:hover {
     h1 {
         color: white;
         transition: all 0.9s ease-in-out;
     }
-
 }
 
-.textfields {
-    position: sticky;
-    background: white;
-    z-index: 1;
-    left: 0;
-    top: 100px;
-    padding: 2rem;
-    box-shadow: 2px 5px 10px rgb(0 0 0 / 17%);
-    max-width: 400px;
-    margin: 15px;
-    border-radius: 10px;
+@media(max-width: 820px) {
+    .editable {
+        padding: 20px 8%;
+    }
+
+    .feature-image,
+    .feature-image-placeholder {
+        height: 500px;
+    }
 }
