--- a/public/styles/components/blog/_menuEditor.scss
+++ b/public/styles/components/blog/_menuEditor.scss
@@ -13,15 +13,17 @@
     justify-content: space-between;
     padding: 0 7.9%;
 
+    .menu-close{
+        border-radius: 5px;
+        padding: 15px 1.9rem;
+    }
+
     .wand {
         display: none;
         cursor: pointer;
-    }
-
-    .editor-toolbar {
-        display: flex;
-        justify-content: space-between;
-        flex-grow: 4;
+        background: none;
+        border-radius: 5px;
+        padding: 8px;
     }
 
     .editor-buttons-container {
