--- a/public/styles/components/blog/_preview.scss
+++ b/public/styles/components/blog/_preview.scss
@@ -64,3 +64,15 @@
         margin: 0 0 50px;
     }
 }
+
+@media(max-width: 820px) {
+    .preview {
+        padding: 20px 8%;
+    }
+    .preview-header {
+        img {
+            height: 500%;
+        }
+    }
+
+}
