--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1625,6 +1625,10 @@ header .navItem {
   border-radius: "10px";
 }
 
+.editable {
+  padding: 20px 20%;
+}
+
 .editor button,
 .preview button {
   cursor: pointer;
@@ -1641,10 +1645,6 @@ header .navItem {
 .editor h2,
 .preview h2 {
   font-size: 20px;
-}
-
-.preview {
-  padding: 2rem;
 }
 
 .feature-image {
@@ -1667,13 +1667,7 @@ header .navItem {
   text-decoration: underline;
 }
 
-.toolbar {
-  box-shadow: 0 10px 15px -2px #80808030;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-.svg-container {
+.feature-image-placeholder {
   background: #CAC6EB;
   padding-top: 280px;
   display: flex;
@@ -1681,8 +1675,11 @@ header .navItem {
   justify-content: center;
   cursor: pointer;
   position: relative;
+  background: #E6D7F5;
+  height: 700px;
+  width: 100%;
 }
-.svg-container h1 {
+.feature-image-placeholder h1 {
   transition: all 0.9s ease-in-out;
   position: absolute;
   top: 35%;
@@ -1695,24 +1692,21 @@ header .navItem {
   letter-spacing: 2px;
 }
 
-.svg-container:hover h1 {
+.feature-image-placeholder:hover h1 {
   color: white;
   transition: all 0.9s ease-in-out;
 }
 
-.textfields {
-  position: sticky;
-  background: white;
-  z-index: 1;
-  left: 0;
-  top: 100px;
-  padding: 2rem;
-  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.17);
-  max-width: 400px;
-  margin: 15px;
-  border-radius: 10px;
-}
+@media (max-width: 820px) {
+  .editable {
+    padding: 20px 8%;
+  }
 
+  .feature-image,
+.feature-image-placeholder {
+    height: 500px;
+  }
+}
 .preview {
   cursor: "default";
   background: "#FFFFFF";
@@ -1773,6 +1767,15 @@ header .navItem {
   margin: 0 0 50px;
 }
 
+@media (max-width: 820px) {
+  .preview {
+    padding: 20px 8%;
+  }
+
+  .preview-header img {
+    height: 500%;
+  }
+}
 .menu-editor {
   box-shadow: 0 10px 15px -2px #80808030;
   border-bottom-left-radius: 10px;
@@ -1788,14 +1791,16 @@ header .navItem {
   justify-content: space-between;
   padding: 0 7.9%;
 }
+.menu-editor .menu-close {
+  border-radius: 5px;
+  padding: 15px 1.9rem;
+}
 .menu-editor .wand {
   display: none;
   cursor: pointer;
-}
-.menu-editor .editor-toolbar {
-  display: flex;
-  justify-content: space-between;
-  flex-grow: 4;
+  background: none;
+  border-radius: 5px;
+  padding: 8px;
 }
 .menu-editor .editor-buttons-container {
   flex-grow: 1;
@@ -1826,6 +1831,54 @@ header .navItem {
     padding-right: 0;
   }
 }
+.textfields {
+  position: sticky;
+  background: white;
+  z-index: 1;
+  left: 0;
+  top: 100px;
+  padding: 2rem;
+  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.17);
+  max-width: 400px;
+  margin: 15px;
+  border-radius: 10px;
+}
+
+.postForm-modal {
+  display: none;
+}
+
+@media (max-width: 820px) {
+  .postForm-modal {
+    display: block;
+  }
+}
+.toolbar {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+.mobile-toolbar {
+  position: fixed;
+  bottom: 0px;
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  width: 100%;
+  padding: 0 5%;
+  box-shadow: 0px -3px 4px rgba(0, 0, 0, 0.08);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.mobile-toolbar .base-button {
+  margin-left: 4%;
+  padding: 1.8rem 15px;
+}
+.mobile-toolbar .base-button:first-child {
+  margin-left: 0;
+}
+
 @media (max-width: 1240px) {
   .home-content {
     justify-content: center;
