--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -16,8 +16,10 @@
 @import 'components/clientAccountPage.scss';
 @import 'components/eventsPage.scss';
 @import 'components/statistics.scss';
-@import 'components/editor.scss';
-@import 'components/preview.scss';
-@import 'components/menuEditor.scss';
+@import 'components/blog/editor.scss';
+@import 'components/blog/preview.scss';
+@import 'components/blog/menuEditor.scss';
+@import 'components/blog/postForm.scss';
+@import 'components/blog/toolbar.scss';
 
 @import './media.scss';
