toolbar buttons and menus

--- a/public/styles/components/blog/_editor.scss
+++ b/public/styles/components/blog/_editor.scss
@@ -48,14 +48,13 @@
 }
 
 .feature-image-placeholder {
-    background: #CAC6EB;
+    background: #f0edf3;
     padding-top: 280px;
     display: flex;
     align-self: center;
     justify-content: center;
     cursor: pointer;
     position: relative;
-    background: #E6D7F5;
     height: 700px;
     width: 100%;
 
