--- a/public/styles/components/_adminLayout.scss
+++ b/public/styles/components/_adminLayout.scss
@@ -31,7 +31,9 @@
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
             margin-right: 1rem;
+            transition: all 0.5s ease;
         }
+
         a:last-child {
             margin-right: 0;
         }
