--- a/public/styles/components/blog/_toolbar.scss
+++ b/public/styles/components/blog/_toolbar.scss
@@ -1,21 +1,80 @@
+.toolbar,
+.mobile-toolbar {
+    svg {
+        cursor: pointer;
+    }
+
+    .toolbar-button-menu {
+        position: absolute;
+        background: white;
+        position: absolute;
+        width: 120px;
+        display: flex;
+        flex-direction: column;
+        font-size: 15px;
+        box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
+        border-radius: 5px;
+        cursor: pointer;
+        left: 0;
+
+        .menu-option {
+            padding: 7px;
+            text-transform: capitalize;
+        }
+
+        .menu-option:hover {
+            background: #E6D7F5;
+        }
+
+        .menu-option:first-child {
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+
+        .menu-option:last-child {
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
+        }
+    }
+
+    .toolbar-button {
+        position: relative;
+        padding: 8px;
+        border-radius: 5px;
+        transition: all 0.35s ease;
+
+        .toolbar-icon {
+            color: #4976ED;
+        }
+    }
+
+    .toolbar-button:hover {
+        background: #E6D7F5;
+    }
+}
+
 .toolbar {
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
+
+    .toolbar-button-menu {
+        top: 70px;
+    }
 }
 
 .mobile-toolbar {
+    padding: 20px 7.9%;
     position: fixed;
     bottom: 0px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     background-color: white;
     width: 100%;
-    padding: 0 5%;
     box-shadow: 0px -3px 4px rgba(0, 0, 0, 0.08);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    
+
     .base-button {
         margin-left: 4%;
         padding: 1.8rem 15px;
@@ -23,5 +82,9 @@
 
     .base-button:first-child {
         margin-left: 0;
+    }
+
+    .toolbar-button-menu {
+        bottom: 65px;
     }
 }
