functional toolbar menu options

--- a/public/styles/components/blog/_toolbar.scss
+++ b/public/styles/components/blog/_toolbar.scss
@@ -19,9 +19,12 @@
         border-radius: 5px;
         cursor: pointer;
         left: 0;
+        padding: 0;
 
         .menu-action {
-            padding: 7px;
+            width: 100%;
+            text-align: start;
+            padding: 10px;
             text-transform: capitalize;
         }
 
