--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,3 +1,6 @@
+@import url('http://fonts.cdnfonts.com/css/new-york-extra-large');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap');
+
 @import 'base.scss';
 @import 'variables.scss';
 
@@ -21,5 +24,6 @@
 @import 'components/blog/menuEditor.scss';
 @import 'components/blog/postForm.scss';
 @import 'components/blog/toolbar.scss';
+@import 'components/blog/posts.scss';
 
 @import './media.scss';
