--- a/public/styles/components/blog/_posts.scss
+++ b/public/styles/components/blog/_posts.scss
@@ -97,6 +97,7 @@
         width: 60px;
         height: 60px;
         border-radius: 50%;
+        object-fit: cover;
     }
 
     .post-author-data {
