--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2071,6 +2071,7 @@ header .navItem {
   width: 60px;
   height: 60px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .post-author-container .post-author-data {
   display: flex;
